--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 android {
-    namespace 'com.example.news_app'
+    namespace 'com.example.news_app_mvvm'
     compileSdk 33
 
     defaultConfig {
